culture and sports section featured posts

--- a/index.html
+++ b/index.html
@@ -705,5 +705,99 @@
                     </section>
                 </section>
                 </section>
+                <section class="picks">
+                <section class="block-title part-picks">Culture</section>
+                <section class="row">
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>Fans, 'Survivor' Contestants Remember the Late Rudy Boesch</h3>
+                        </section>
+                    </article>
+                    <article class="col-md-4">
+                        <section class="wrap">
+                          <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>Watch Kristen Stewart Host 'Saturday Night Live'</h3>
+                        </section>
+                    </article>
+                   <section class="col-md-4">
+                        <section class="feature2 top-column">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">'The King' Director on How He Brought the Battle of Agincourt to Life</p>
+                                </section>
+                            </section>
+                        </section>
+                       <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">'Terminator Dark Fate': Callbacks and Easter Eggs Explained</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">'The Walking Dead' Season 10 Episode 5 Spoilers</p>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </section>
+                </section>
+                <section class="picks">
+                <section class="block-title part-picks">Sports</section>
+                <section class="row">
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>Oregon @ USC Preview: Can Ducks keep playoffs hopes alive?</h3>
+                        </section>
+                    </article>
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>SMU @ Memphis: Can the Mustangs Stay Undefeated?</h3>
+                        </section>
+                    </article>
+                    <section class="col-md-4">
+                        <section class="feature2 top-column">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Real Madrid vs. Real Betis Preview: Madrid Looks for Second Straight Win</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Nationals Pitcher Joins List Of Athletes Who Skipped White House Visit</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Torino vs Juventus: Old Lady Looks to Continue Turin Derby Domination</p>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </section>
+                </section>
   	</body>
   	</html>
