most read bottom posts

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     <section class="row">
                       <section class="col-md-3 align-self-center">
                           <section class="wrap">
-                              <a><img src="images/17190426-0503cover1800x2400.jpg" class="img-fluid" alt="responsive"><span class="pic-on">MAY 03 ISSUE</span></a>
+                              <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">MAY 03 ISSUE</span></a>
                           </section>
                           <p class="gray">See All Features</p>
                       </section>
@@ -797,6 +797,84 @@
                             </section>
                         </section>
                     </section>
+                </section>
+                </section>
+                <section class="subscribe">
+                <section class="row">
+                    <section class="col-lg-4">
+                        <section class="part-title red">SUBSCRIBE</section>
+                        <section class="items">
+                            <section class="item1">
+                                <img src="images/image1.jpg" class="itemsimg">
+                                <h3>Digital Only</h3>
+                                <section>
+                                    <span class="itemsspan">Free access to 40+ digital editions</span>
+                                    <br>
+                                    <span class="itemsspan">Website access</span>
+                                    <br>
+                                    <span class="itemsspan">Daily Newsletter</span>
+                                </section>
+                            </section>
+                            <section class="item2">
+                                <img src="images/image1.jpg" class="itemsimg">
+                                <h3>Print & Digital</h3>
+                                <section>
+                                    <span class="itemsspan">Weekly magazine, <br>delivered</span>
+                                    <br>
+                                    <span class="itemsspan">Daily Newsletter</span>
+                                    <br>
+                                    <span class="itemsspan">Website access</span>
+                                </section>
+                            </section>
+                            <section id="signin2">
+                                <a href="#">SUBSCRIBE <i class="fas fa-chevron-right"></i></a>
+                            </section>
+                        </section>
+                    </section>
+                    <section class="col-lg-4">
+                        <section class="block-title mostread">MOST READ</section>
+                          <section class="feature2">
+                            <section class="row">
+                                <section class=" col-4"><img src="images/image1.jpg" alt="responsive"></section>
+                                <section class="col-8">
+                                    <p class="info">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-4"><img src="images/image1.jpg" alt="responsive"></section>
+                                <section class="col-8">
+                                    <p class="info">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-4"><img src="images/image1.jpg" alt="responsive"></section>
+                                <section class="col-8">
+                                    <p class="info">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-4"><img src="images/image1.jpg" alt="responsive"></section>
+                                <section class="col-8">
+                                    <p class="info">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-4"><img src="images/image1.jpg" alt="responsive"></section>
+                                <section class="col-8">
+                                    <p class="info">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</p>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </section>
                 </section>
                 </section>
   	</body>
