--- a/index.html
+++ b/index.html
@@ -877,5 +877,58 @@
                 </section>
                 </section>
                 </section>
+                <footer>
+                  <section class="footer-top">
+                    <section class="row">
+                      <section class="col-md-9 logo-footer">
+                        <img src="images/bottom-logo.png">
+                        <span class="copyright">© 2019 Newsweek</span>
+                      </section>
+                    <section class="col-md-3 media-icons">
+                        <i class="fab fa-facebook-square"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-tumblr"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </section>
+                  </section>
+                </section>
+                <section class="footer-bottom">
+                  <section class="row justify-content-between">
+                    <section class="col-md-7 footer-bottom-left">
+                        <ul class="menu row">
+                            <li class="first leaf">About Us</li>
+                            <li class="leaf">Corrections</li>
+                            <li class="leaf">Contact Us</li>
+                            <li class="leaf">Editorial Guidelines</li>
+                            <li class="leaf">Advertise</li>
+                            <li class="leaf">Copyright</li>
+                            <li class="leaf">Terms & Conditions</li>
+                            <li class="leaf">Privacy Policy</li>
+                            <li class="leaf">Cookie Policy</li>
+                            <li class="leaf">Terms of Sale</li>
+                            <li class="leaf">Archive</li>
+                            <li class="leaf">Announcements</li>
+                            <li class="last leaf">Consent preferences</li>
+                        </ul>
+                    </section>
+                    <section class="col-md-4 footer-bottom-right">
+                        <section class="row justify-content-between">
+                            <strong class="editions col-4 text-right">Editions</strong>
+                            <ul class="menu col-8 row justify-content-end" id="right">
+                                <li class="first leaf">U.S. Edition</li>
+                                <li class="leaf">Middle East</li>
+                                <li class="leaf">日本</li>
+                                <li class="leaf">한국</li>
+                                <li class="leaf">Pakistan</li>
+                                <li class="leaf">Polska</li>
+                                <li class="last leaf">România</li>
+                            </ul>
+                        </section>
+                    </section>
+                </section>
+              </section>
+            </footer>
+      </section>
   	</body>
   	</html>
