fixed html errors

--- a/index.html
+++ b/index.html
@@ -136,42 +136,42 @@
                         <section class="featured sticky-top">
                             <section class="block-title">CULTURE & TRAVEL</section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg"></section>
+                                <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>Is It Safe to Travel to Hong Kong During Protests? Here's What to Consider</h6>
                                 <section class="summary">“I will make sure we control the territory west of Jordan,” Israeli Prime Minister Benjamin Netanyahu said in the run-up to the election.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg"></section>
+                                <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>What Time Do Clocks Go Back? What You Need to Know for Daylight Saving Time</h6>
                                 <section class="summary">Yes, you need to turn your clock back. No, you don't need to wake up in the middle of the night to do so.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg"></section>
+                                <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>Google Acquires Fitbit for $2.1 Billion—Says Ads Won't Use Wellness Data</h6>
                                 <section class="summary">We see an opportunity to invest even more in Wear OS as well as introduce Made by Google wearable devices into the market," said Google executive Rick Osterloh, announcing the deal.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg"></section>
+                                <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>Heavy Smoking Can Make Your Face Look Older, Study Suggests</h6>
                                 <section class="summary">The scientists said that this knowledge may help to deter some people from taking up the habit or help others to quit.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg"></section>
+                                <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>Franklin Graham Urges Prayers for Trump Through 'Pray for 45' T-shirt</h6>
                                 <section class="summary">Graham, the president of Samaritan's Purse and his late father's Billy Graham Evangelistic Association, quoted the Bible Friday in a plea for Americans to purchase a "Pray for 45" T-shirt.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg"></section>
+                                <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>Who is Chad Wolf? Trump Names New Acting DHS Secretary</h6>
                                 <section class="summary">Wolf will become the fifth person to serve in the role since the beginning of the Trump presidency.</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg"></section>
+                                <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>Kamala Harris Takes a Dig at Elizabeth Warren at Iowa Event</h6>
                                 <section class="summary">"I've only had one client in my entire life, and that has been the people. Unlike other people, unlike others, I have never represented a corporation."</section>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section class="image"><img src="images/image1.jpg"></section>
+                                <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>Cristiano Ronaldo's Hairdresser Found Stabbed to Death in Hotel Room</h6>
                                 <section class="summary">A housekeeper discovered Ricardo Marques Ferreira's body covered in blood and with several stab wounds when she entered his room in Zurich, Switzerland to clean it.</section>
                             </section>
@@ -238,35 +238,35 @@
                         <section class="featured">
                             <section class="block-title">LATEST NEWS</section>
                             <section class="clearfix" id="more-stories-part">
-                                <section id="image"><img src="images/politic1.jpg"></section>
+                                <section id="image"><img src="images/politic1.jpg" alt="responsive"></section>
                                 <h6>Ex-RNC Chair Blasts Republicans Threatening 'Civil War' If Trump Impeached</h6>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section id="image"><img src="images/politic2.jpg"></section>
+                                <section id="image"><img src="images/politic2.jpg" alt="responsive"></section>
                                 <h6>California Fire Updates: Kincade, Maria and Sobrante Fires Blaze On</h6>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section id="image"><img src="images/politic1.jpg"></section>
+                                <section id="image"><img src="images/politic1.jpg" alt="responsive"></section>
                                 <h6>Fox News Host Chides GOP for Not Fighting the Way the Democrats Fight</h6>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section id="image"><img src="images/politic2.jpg"></section>
+                                <section id="image"><img src="images/politic2.jpg" alt="responsive"></section>
                                 <h6>Naked California Man and Woman Try to Lure Boy, 11, into Car</h6>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section id="image"><img src="images/politic1.jpg"></section>
+                                <section id="image"><img src="images/politic1.jpg" alt="responsive"></section>
                                 <h6>Powerball Results for 11/2/19: Did Anyone Win the $150 Million Jacpot?</h6>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section id="image"><img src="images/politic2.jpg"></section>
+                                <section id="image"><img src="images/politic2.jpg" alt="responsive"></section>
                                 <h6>F1: All You Need to Know Ahead of the U.S. Grand Prix</h6>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section id="image"><img src="images/politic1.jpg"></section>
+                                <section id="image"><img src="images/politic1.jpg" alt="responsive"></section>
                                 <h6>New York City Marathon 2019: Route, Road Closures and Watch Spots</h6>
                             </section>
                             <section class="clearfix" id="more-stories-part">
-                                <section id="image"><img src="images/politic2.jpg"></section>
+                                <section id="image"><img src="images/politic2.jpg" alt="responsive"></section>
                                 <h6>New York City Marathon 2019: Route, Road Closures and Watch Spots</h6>
                             </section>
                         </section>
@@ -303,14 +303,14 @@
                     </section>
                   </section>
                   <section class="bottom">
-                  <section class="magazine">
-                    <section class="row">
-                      <section class="col-md-3 align-self-center">
+                    <section class="magazine">
+                      <section class="row">
+                        <section class="col-md-3 align-self-center">
                           <section class="wrap">
                               <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">MAY 03 ISSUE</span></a>
                           </section>
                           <p class="gray">See All Features</p>
-                      </section>
+                        </section>
                       <section class="col-md-9">
                               <section class="row justify-content-center title-border">
                                   <span class="col-12 icon-n"></span>
@@ -318,7 +318,7 @@
                               </section>
                           <section class="row">
                               <article class="col-md-4 magazine-article">
-                                  <section class="image-article" id="image-article1"><img src="images/yang1.jpg"/></section>
+                                  <section class="image-article" id="image-article1"><img src="images/yang1.jpg" alt="responsive"></section>
                                   <section class="category">
                                       <span class="mag-cat">Features</span>
                                       <span class="cat"><a href="/us">U.S.</a></span>
@@ -326,7 +326,7 @@
                                   <h5 class="article-title">Andrew Yang: Math, Jobs and the Robot Future</h5>
                               </article>
                               <article class="col-md-4 magazine-article">
-                                  <section class="image-article" id="image-article2"><img src="images/yang1.jpg"/></section>
+                                  <section class="image-article" id="image-article2"><img src="images/yang1.jpg" alt="responsive"></section>
                                   <section class="category">
                                       <span class="mag-cat">Features</span>
                                       <span class="cat"><a href="/us">U.S.</a></span>
@@ -334,7 +334,7 @@
                                   <h5 class="article-title">Tug of War: Photographs Capture Horror of Turkey's Offensive Into Syria</h5>
                               </article>
                               <article class="col-md-4 magazine-article">
-                                  <section class="image-article" id="image-article3"><img src="images/yang1.jpg"/></section>
+                                  <section class="image-article" id="image-article3"><img src="images/yang1.jpg" alt="responsive"></section>
                                   <section class="category">
                                       <span class="mag-cat">Downloads</span>
                                       <span class="cat"><a href="/us">U.S.</a></span>
@@ -348,7 +348,7 @@
                 <section class="magazine">
                   <section class="row bottom">
                     <article class="col-md-3 magazine-article">
-                        <section class="image-article" id="image-article4"><img src="images/image1.jpg"/></section>
+                        <section class="image-article" id="image-article4"><img src="images/image1.jpg" alt="responsive"></section>
                         <section class="category">
                             <span class="mag-cat">Cover</span>
                             <span class="cat"><a href="/us">CULTURE</a></span>
@@ -356,7 +356,7 @@
                         <h5 class="article-title">9 Larger-Than-Life Sculpture Parks Around the World</h5>
                     </article>
                     <article class="col-md-3 magazine-article">
-                        <section class="image-article" id="image-article5"><img src="images/image1.jpg"/></section>
+                        <section class="image-article" id="image-article5"><img src="images/image1.jpg" alt="responsive"></section>
                         <section class="category">
                             <span class="mag-cat">DOWNTIME</span>
                             <span class="cat"><a href="/us">CULTURE</a></span>
@@ -364,7 +364,7 @@
                         <h5 class="article-title">Kelly McCreary on the Writers of 'Grey's Anatomy' and Getting Out the Vote</h5>
                     </article>
                     <article class="col-md-3 magazine-article">
-                        <section class="image-article" id="image-article6"><img src="images/image1.jpg"/></section>
+                        <section class="image-article" id="image-article6"><img src="images/image1.jpg" alt="responsive"></section>
                         <section class="category">
                             <span class="mag-cat">DOWNTIME</span>
                             <span class="cat"><a href="/us">CULTURE</a></span>
@@ -372,7 +372,7 @@
                         <h5 class="article-title">The Literary Influences of Superstar Musician David Bowie</h5>
                     </article>
                     <article class="col-md-3 magazine-article">
-                        <section class="image-article" id="image-article7"><span class="mag-cat" id="marathon">IN FOCUS</span><img src="images/image1.jpg"/></section>
+                        <section class="image-article" id="image-article7"><span class="mag-cat" id="marathon">IN FOCUS</span><img src="images/image1.jpg" alt="responsive"></section>
                         <h5 class="article-title">THE QUEEN’S SPEECH</h5>
                     </article>
                   </section>
@@ -805,7 +805,7 @@
                         <section class="part-title red">SUBSCRIBE</section>
                         <section class="items">
                             <section class="item1">
-                                <img src="images/image1.jpg" class="itemsimg">
+                                <img src="images/image1.jpg" class="itemsimg" alt="responsive">
                                 <h3>Digital Only</h3>
                                 <section>
                                     <span class="itemsspan">Free access to 40+ digital editions</span>
@@ -816,7 +816,7 @@
                                 </section>
                             </section>
                             <section class="item2">
-                                <img src="images/image1.jpg" class="itemsimg">
+                                <img src="images/image1.jpg" class="itemsimg" alt="responsive">
                                 <h3>Print & Digital</h3>
                                 <section>
                                     <span class="itemsspan">Weekly magazine, <br>delivered</span>
