fixed images alt

--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
   <body>
   	<section class="fixed-top" id="stickynav">
       <section class="d-flex justify-content-between" id="navscroll">
-        <div class="p-2">
-          <date id="datenav">Thu, Oct 25, 2019</date>
-  	    </div>
         <section class="p-2" id="signin">
           <span>SIGN IN</span><a href="#">SUBSCRIBE <i class="fas fa-chevron-right" id="shevron"></i></a>
           <i class="fas fa-bars" id="barsId"></i>
   	    </section>
   	  </section>
-      <section class="logoimg"><img src="images/big-logo.svg"></section>
+      <section class="logoimg"><img src="images/big-logo.svg" alt="Logo"></section>
   	</section>
   	<nav class="header-bottom" id="navbottom">
   	  <ul class="page-nav">
@@ -237,35 +234,35 @@
                         </section>
                         <section class="featured">
                             <section class="block-title">LATEST NEWS</section>
-                            <section class="clearfix" id="more-stories-part1">
+                            <section class="clearfix" id="more-stories-part9">
                                 <section id="image1"><img src="images/politic1.jpg" alt="responsive"></section>
                                 <h6>Ex-RNC Chair Blasts Republicans Threatening 'Civil War' If Trump Impeached</h6>
                             </section>
-                            <section class="clearfix" id="more-stories-part2">
+                            <section class="clearfix" id="more-stories-part10">
                                 <section id="image2"><img src="images/politic2.jpg" alt="responsive"></section>
                                 <h6>California Fire Updates: Kincade, Maria and Sobrante Fires Blaze On</h6>
                             </section>
-                            <section class="clearfix" id="more-stories-part3">
+                            <section class="clearfix" id="more-stories-part11">
                                 <section id="image3"><img src="images/politic1.jpg" alt="responsive"></section>
                                 <h6>Fox News Host Chides GOP for Not Fighting the Way the Democrats Fight</h6>
                             </section>
-                            <section class="clearfix" id="more-stories-part4">
+                            <section class="clearfix" id="more-stories-part12">
                                 <section id="image4"><img src="images/politic2.jpg" alt="responsive"></section>
                                 <h6>Naked California Man and Woman Try to Lure Boy, 11, into Car</h6>
                             </section>
-                            <section class="clearfix" id="more-stories-part5">
+                            <section class="clearfix" id="more-stories-part13">
                                 <section id="image5"><img src="images/politic1.jpg" alt="responsive"></section>
                                 <h6>Powerball Results for 11/2/19: Did Anyone Win the $150 Million Jacpot?</h6>
                             </section>
-                            <section class="clearfix" id="more-stories-part6">
+                            <section class="clearfix" id="more-stories-part14">
                                 <section id="image6"><img src="images/politic2.jpg" alt="responsive"></section>
                                 <h6>F1: All You Need to Know Ahead of the U.S. Grand Prix</h6>
                             </section>
-                            <section class="clearfix" id="more-stories-part7">
+                            <section class="clearfix" id="more-stories-part15">
                                 <section id="image7"><img src="images/politic1.jpg" alt="responsive"></section>
                                 <h6>New York City Marathon 2019: Route, Road Closures and Watch Spots</h6>
                             </section>
-                            <section class="clearfix" id="more-stories-part8">
+                            <section class="clearfix" id="more-stories-part16">
                                 <section id="image8"><img src="images/politic2.jpg" alt="responsive"></section>
                                 <h6>New York City Marathon 2019: Route, Road Closures and Watch Spots</h6>
                             </section>
@@ -881,7 +878,7 @@
                   <section class="footer-top">
                     <section class="row">
                       <section class="col-md-9 logo-footer">
-                        <img src="images/bottom-logo.png">
+                        <img src="images/bottom-logo.png" alt="Logo">
                         <span class="copyright">© 2019 Newsweek</span>
                       </section>
                     <section class="col-md-3 media-icons">
