more stories section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </article>
                         </section>
                         <section class="featured sticky-top">
-                            <section class="block-title">CULTURE & TRAVEL</section>
+                            <section class="block-title">MORE STORIES</section>
                             <section class="clearfix" id="more-stories-part1">
                                 <section class="image"><img src="images/image1.jpg" alt="responsive"></section>
                                 <h6>Is It Safe to Travel to Hong Kong During Protests? Here's What to Consider</h6>
